--- a/package.json
+++ b/package.json
@@ -42,5 +42,8 @@
     "react-context-devtool": "^2.0.3",
     "typescript": "^4.9.5"
   },
+  "engines": {
+    "node": "16.20.1"
+  },
   "license": "MIT"
 }
